Changes for Perl programming language extension Module-Install

1.01 Wed 27 Apr 2011
	- Better error message in install_share (CHORNY)
	- Compatibility with MYMETA.yml support in EUMM (CHORNY)
	- Support for extraction of Artistic 2.0 license (CHORNY)
	- Support https links when searching for bug trackers (CHORNY)

1.00 Tue 22 Jun 2010
	- Remove obsolete text warning about nonexistent auto_install()
	  woes
	- auto_install() wrongly merged build_requires entries into
	  requires; note that it's correct build_requires entries
	  are merged into requires if you use older versions of
	  EUMM, which didn't support build_requires. (ISHIGAKI)

0.99 Tue  1 Jun 2010
	- FindBin->again only works on 5.8.3

0.98 Mon 21 May 2010
	- Resolved #57326: Tests fail when being run in parallel
	  (by Florian Ragwitz) (ISHIGAKI)
	- Resolved #57335: Re: Problem with Module::Install + Fix
	  (by Paul Makepeace) (ISHIGAKI)
	- Added "add_metadata" to add extra (experimental) metadata to
	  META.yml (requested by Florian Ragwitz) (ISHIGAKI)
	- Fixed a test to check EU::MM version as only newer EUMM has
	  MIN_PERL_VERSION (ISHIGAKI) 
	- Made fixup_makefile a bit robust, not to be interfered by
	  antivirus etc (ISHIGAKI)

0.97 Mon 10 May 2010
	- Added missing LWP dependency, starting with 2 year old version (ADAMK)

0.96 Tue 10 May 2010
	- Stop Bundle.pm pointlessly calling import() of bundled modules
	  (MSTROUT)
	- Resolved #55464: Wrong license detection (by Jens Rehsack)
	  (ISHIGAKI)
	- Resolved #55594: Missing license (by Salve J. Nilsen) (ISHIGAKI)
	- Resolved #5849 (load_extensions() causes "Subroutine %s
	  redefined" warnings) (by Steve Hay) (ISHIGAKI)
	- Resolved #19445: unknown functions in Makefile.PL should fail.
	  and #19449: license is not found if unknown function is present
	  (both are the same issue) (ISHIGAKI)
	- Resolved #54890: MYMETA.yml creation doesn't work (by miyagawa)
	  (ISHIGAKI)
	- Resolved #55974: FakeAdmin does not define (by Francesc Guasch)
	  (ISHIGAKI)